<resources>
    <string name="app_name">Travelouder</string>
    <string name="hint_email">Email</string>
    <string name="hint_pass">Password</string>
    <string name="login_btn">LOGIN</string>
    <string name="reg_btn">Not a member? Sign up now!</string>
    <string name="fullname">Fullname</string>
    <string name="register_btn">REGISTER</string>
    <string name="lgn_link_btn">Already a member? Log me in !</string>
    <string name="loading">Loading…</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_btn"> Verify Email</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign out</string>
    <string name="action_home">Home</string>
</resources>
