<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:id="@+id/action_home"
        android:title="@string/action_home"
        android:icon="@drawable/baseline_perm_identity_black_48"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/baseline_settings_black_48"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_sign_out"
        android:icon="@drawable/baseline_exit_to_app_black_48"
        android:title="@string/action_sign_out"
        app:showAsAction="ifRoom" />

</menu>